template version test

--- a/reviews/templates/reviews/review_form.html
+++ b/reviews/templates/reviews/review_form.html
@@ -1,5 +1,6 @@
 {% extends 'reviews/base.html' %}
 {% block content %}
+<!-- VERSION 2025 TEST -->
 
 <div class="review-page">
   <div class="review-wrapper">
