Fix Google autocomplete + hotel search CSS

--- a/reviews/templates/reviews/base.html
+++ b/reviews/templates/reviews/base.html
@@ -18,7 +18,7 @@
 <!-- NAVBAR -->
 <nav class="navbar">
     <a href="{% url 'home' %}" class="logo">
-        <img src="{% static 'reviews/workinside_logo.png' %}" alt="WorkInside Logo" class="logo-img">
+        <img src="{% static 'reviews/workinside_logo_v2.png' %}" alt="WorkInside Logo" class="logo-img">
         <span class="logo-text">WorkInside</span>
     </a>
 
